Bug fixes: General Book key selection fixed Dictionary module images installed over existing module no longer delete images Tab sizing adjustments that were visible at run time are now hidden Select-tab selection via script now works Display and redraw time was improved Switching from linked to single window now updates single window to hold only one chapter of text Verse highlighting is now synchronized across all windows, and various bugs were worked out

--- a/xul/skin/style.css
+++ b/xul/skin/style.css
@@ -250,6 +250,7 @@ a:active{color:blue;}
   float:left;
 }
 .tabs {
+  font-size:10px;
   color:grey;
   margin-left:3px;
   margin-right:3px;
